--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -417,7 +417,7 @@ ul.small-bullet {
 
 ul.small-bullet li {
     list-style-type: disc;
-    margin: 20px 0px;
+    margin: 10px 0px;
 }
 
 table.table-style1 {
@@ -672,7 +672,7 @@ h1.main-heading {
 }
 .moreInfo {
     position: absolute;
-    top: 100px;
+    top: 93px;
     left: 10px;
     z-index: 91;
     background: transparent;
